# dream-weave

./: AGENTS.md  IMPROVEMENTS.md  PLANS.md  RDD.md  README.md
.github/workflows/: ci.yml
backend/: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: dreams.py
backend/app/schemas/: dreams.py
backend/app/services/: dream_store.py  narrative.py  transcription.py
backend/tests/: test_dreams.py  test_health.py
docs/: RELEASE_PLAYBOOK.md
mobile/: .gitignore  README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/lib/models/: dream_entry.dart  dream_highlights.dart  dream_journal.dart  transcription_result.dart
mobile/lib/screens/: dream_capture_screen.dart
mobile/lib/services/: alarm_service.dart  dream_service.dart  voice_recorder.dart
mobile/test/: widget_test.dart
supabase/: .env.example  README.md  config.toml
